--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -240,7 +240,7 @@ body,
       </nav>
 
       <!-- Button ya Print -->
-<div style="text-align: right; margin-bottom: 20px;">
+<!-- <div style="text-align: right; margin-bottom: 20px;">
   <button onclick="window.print()" 
           style="
             background-color: #0dcaf0;
@@ -257,7 +257,7 @@ body,
           onmouseout="this.style.backgroundColor='#0dcaf0'">
     🖨️ Print Report
   </button>
-</div>
+</div> -->
 
 
 
