--- a/core/templates/health_list.html
+++ b/core/templates/health_list.html
@@ -58,7 +58,7 @@
 
   <!-- Menstrual Section -->
   <div id="menstrual-section" class="p-4 rounded shadow mb-4" style="display: none; background-color: #fdf4ff;">
-    <h4 class="text-purple mb-3">🩸 Menstrual Tracker Panel</h4>
+    <h4 class="text-purple mb-3">🩸 Menstrual Tracker</h4>
     <p style="color: black;">Track your cycle, period, pain level, and more for better reproductive health.</p>
     <a href="{% url 'menstrual_list' %}" class="btn btn-pink text-white">Go to Menstrual Records</a>
   </div>
